samples/_failures_safe/1761141137_f5aff0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4237fcb.c: In function ‘main’:
./samples/SAFE/__tmp_d4237fcb.c:154:27: error: expected ‘;’ at end of input
  154 |                     printf
      |                           ^
      |                           ;
./samples/SAFE/__tmp_d4237fcb.c:154:21: error: expected declaration or statement at end of input
  154 |                     printf
      |                     ^~~~~~
./samples/SAFE/__tmp_d4237fcb.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d4237fcb.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d4237fcb.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d4237fcb.c:154:21: error: expected declaration or statement at end of input
